[gd_scene load_steps=8 format=3 uid="uid://ulwbeuk17l4a"]

[ext_resource type="Script" path="res://scripts/enemy_starfish.gd" id="1_eii1d"]
[ext_resource type="Texture2D" uid="uid://di0d5d50s4vl4" path="res://assets/entities/starfish.png" id="2_mrpfp"]

[sub_resource type="Animation" id="Animation_g70lf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k6h1x"]
resource_name = "boiling"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25209),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fksog"]
_data = {
"RESET": SubResource("Animation_g70lf"),
"boiling": SubResource("Animation_k6h1x")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_weevn"]
height = 56.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8v1xk"]
height = 76.3538

[node name="EnemyStarfish" type="Area2D" groups=["enemy"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_eii1d")
health = 11
score_value = 33

[node name="EnemySprite" type="Sprite2D" parent="."]
modulate = Color(0.972549, 0, 0.933333, 1)
texture = ExtResource("2_mrpfp")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fksog")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-30, -4)
rotation = -1.27409
shape = SubResource("CapsuleShape2D_weevn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(16, 22)
rotation = 2.61799
shape = SubResource("CapsuleShape2D_8v1xk")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(-14, 24)
rotation = 3.66519
shape = SubResource("CapsuleShape2D_8v1xk")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(28, -8)
rotation = 1.3439
shape = SubResource("CapsuleShape2D_weevn")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2(0, -30)
shape = SubResource("CapsuleShape2D_weevn")

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
